# December 27, 2012
	- accounts can now be registered
		- TODO: prevent duplicate registrations of the same name

# December 26, 2012
	- board name, admin panel button, and version info (if enabled) are now located in a static bar at the top of the screen
	- copyright notice is now behind the main container
	- cleaned up UI
		- copyright notice is now located below page container
		- page container is no longer some weird floaty thing (why did I do that again?)

# December 24, 2012
	- passwords can now be hashed via hashPassword(str) as long as config.functions.php is included (implied when config.php is)
	- moderator posts are now saved as distinguished when they are posted to the database as opposed to at read time
	- cleaned up viewthread so it has a more reasonable font size, and usernames are now next to the correct posts

# December 23, 2012
	- moderator posts can now be made by defining a key(s) in includes/function.postmessage.php
		- Note: changing these keys will cause previously highlighted posts to become unhighlighted as it is currently
		  based on the key read from the database vs. the one in the postmessage function instead of being saved as a
		  moderator post.

# Sept 16, 2012
	- threads are now created using the next available id in the thread_index table instead of a random number 
	- viewing a forum now correctly shows thread titles and appropriate links
	
# Sept 15, 2012
	- removed thread titles from being stored in the thread table in favour of a thread_index table
	- updated install script to include creation of a thread_index table to store thread titles
	- began working on getting next AUTO_INCREMENT value from thread_index table

# Sept 9, 2012
	- added check to see if thread table exists for the specified thread
	- posting a thread will now output the correct link to view the thread
	- removed view post references since posts are now stored in per-thread tables, not a massive, site-wide posts table

# Sept 8, 2012